@@ -24,5 +24,9 @@ libslp_la_SOURCES = libslp_dereg.c   \
 	libslp_findsrvtypes.c \
 	libslp_knownda.c \
         libslp.h
+
+#if you're building on Irix, exchange commented and uncommented lines
+#libslp_la_LIBADD = -L../common/libcommonlibslp
 libslp_la_LIBADD = ../common/libcommonlibslp.la
+
 libslp_la_LDFLAGS = -version-info 1:0:0
